[FIX] Shadow & center card on mobile

--- a/style.css
+++ b/style.css
@@ -15,10 +15,6 @@ body {
     --font-main: 'Segoe UI', Arial, sans-serif;
 }
 
-.section__divider {
- 
-}
-
 
 .section__title {
     display: flex;
@@ -468,7 +464,7 @@ body {
 .card {
     background: #fff;
     border-radius: 10px;
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.20);
+    box-shadow: 5px 4px 15px rgba(0, 0, 0, 0.10);
     display: flex;
     flex-direction: column;
 
@@ -555,7 +551,7 @@ body {
 
 .card__price span {
     font-size: 1.7rem;
-    font-weight: 800;
+    font-weight: 700;
     display: block;
 }
 
@@ -572,10 +568,10 @@ body {
 }
 
 .card__price small {
-    font-size: 0.95rem;
+    font-size: 1.1rem;
     color: #888;
     display: block;
-    margin-top: 2px;
+    letter-spacing: 2px;
 }
 
 .swiper-pagination {
